# CopyToClipboardAndAddPrefix

./: .gitignore  CMakeLists.txt  CopyToClipboardAndAddPrefix.sln
CopyToClipboardAndAddPrefix/: CopyFromClipboardClass.cpp  CopyFromClipboardClass.h  CopyToClipboardAndAddPrefix.vcxproj  CopyToClipboardAndAddPrefix.vcxproj.filters  InputTextClass.cpp  InputTextClass.h  PostfixAndPrefixClass.cpp  PostfixAndPrefixClass.h  StrConcatVoid.cpp  Utf8ToUtf16_Class.cpp  Utf8ToUtf16_Class.h  WriteClipboardClass.cpp  WriteClipboardClass.h  main.cpp
